--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -22,14 +22,7 @@
         <button class="btn btn-primary" type="submit">Search</button>
     </div>
     
-   
-
-
 </form>
-<div>
-<% books.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-        <img height="150" width="150" src="<%= book.coverImagePath %>">
-    </a>
-<%}) %>
-</div>
+<br>
+
+<%- include('../partials/bookGrid', { books: books, large: true }) %>
